--- a/style-change/add_config/waybar-confs/colors.css
+++ b/style-change/add_config/waybar-confs/colors.css
@@ -1,9 +1,9 @@
 @define-color bg0   #211a17;
 @define-color bg1   #362f2b;
+@define-color bg2   #9BA4FF;
 @define-color tip   #221e1b;
-@define-color accent #a9b4fe;
+@define-color accent #FFB69B;
 @define-color text #cdd6f4;
-
 
 @define-color bar-bg rgba(0, 0, 0, 0);
 
@@ -14,10 +14,46 @@
 @define-color tool-color #4c4f69;
 @define-color tool-border #ccd0da;
 
+/*
+*
+* Catppuccin Mocha palette
+* Maintainer: rubyowo
+*
+*/
 
+@define-color base   #1e1e2e;
+@define-color mantle #181825;
+@define-color crust  #11111b;
+
+@define-color text     #cdd6f4;
+@define-color subtext0 #a6adc8;
+@define-color subtext1 #bac2de;
+
+@define-color surface0 #313244;
+@define-color surface1 #45475a;
+@define-color surface2 #585b70;
+
+@define-color overlay0 #6c7086;
+@define-color overlay1 #7f849c;
+@define-color overlay2 #9399b2;
+
+@define-color blue      #89b4fa;
+@define-color lavender  #b4befe;
+@define-color sapphire  #74c7ec;
+@define-color sky       #89dceb;
+@define-color teal      #94e2d5;
+@define-color green     #a6e3a1;
+@define-color yellow    #f9e2af;
+@define-color peach     #fab387;
+@define-color maroon    #eba0ac;
+@define-color red       #f38ba8;
+@define-color mauve     #cba6f7;
+@define-color pink      #f5c2e7;
+@define-color flamingo  #f2cdcd;
+@define-color rosewater #f5e0dc;
 
 /*
-
+#2A6F8A
 text - ffffff
 accent - ffbf9b
 */
