--- a/waybar/style.css
+++ b/waybar/style.css
@@ -7,6 +7,8 @@
   font-weight: bold;
   font-size: 13px;
   min-height: 0px;
+  /* padding: 0px;
+  margin: 0px; */
 }
 
 
@@ -16,6 +18,7 @@ window#waybar {
   /* rgba(0, 0, 0, 0.1) */
   /* opacity: 0.9; */
   /* color: #cdd6f4; */
+
 }
 
 
@@ -154,8 +157,9 @@ tooltip {
 
 #tray {
 	/* margin-left: 5px; */
-  margin-right: 5px;
-	padding-left: 10px;
+  margin-right: 12px;
+  margin-left: 5px;
+	/* padding-left: 10px; */
 	margin-bottom: 3px;
 	padding-right: 10px;
 	transition: none;
@@ -180,7 +184,11 @@ tooltip {
 
 
 #clock {
-  color: @text;
+  /* background: transparent;  */
+  background: rgba(255, 182, 155, .5); /* @accent ; */
+  border: 1.8px @bg2;
+  /* opacity: 0.3; */
+  color: @bg1;
   border-radius: 10px;
 }
 
@@ -188,14 +196,14 @@ tooltip {
 
 #cpu {
   color: @text;
-  margin-right: 5px;
+  margin-left: 5px;
 }
 
 
 
 #memory {
   color: @text;
-  margin-right: 5px;
+  margin-left: 5px;
 }
 
 
@@ -217,7 +225,7 @@ tooltip {
 #pulseaudio {
   color: @text;
   margin-right: 5px;
-  margin-left: 5px;
+  margin-left: 12px;
 }
 
 
@@ -266,7 +274,7 @@ tooltip {
 
 #custom-updates {
   color: @text;
-  margin-right: 5px;
+  /* margin-right: 5px; */
   margin-left: 5px;
 }
 
@@ -279,8 +287,8 @@ tooltip {
 
 
 #custom-cycle_wall{
-  background: rgb(155, 214, 255);
-  background: linear-gradient(45deg, rgba(155, 214, 255, 1) 0%, rgba(155, 214, 255, 0.9870801033591732) 35%, rgba(155,164,255,1) 87%, rgba(155, 214, 255, 1) 90%);  color: @text;
+  background: rgb(255, 159, 155);
+  background: linear-gradient(45deg, rgba(255, 159, 155, 1) 0%, rgba(255, 159, 155, 0.9870801033591732) 35%, rgba(255,212,155,1) 87%, rgba(255,212,155,1) 90%, rgba(255,212,155,1) 100%);  color: @text;
   background-size: 500% 500%;
   animation: gradient 5s linear infinite;
   font-weight:  bolder;
