--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -2,7 +2,7 @@
 @define-color bg1   #362f2b;
 @define-color bg2   #9BA4FF;
 @define-color tip   #221e1b;
-@define-color accent #FFB69B;
+@define-color accent #9BD6FF;
 @define-color text #cdd6f4;
 
 @define-color bar-bg rgba(0, 0, 0, 0);
