--- a/waybar/style-old.css
+++ b/waybar/style-old.css
@@ -7,8 +7,6 @@
   font-weight: bold;
   font-size: 13px;
   min-height: 0px;
-  /* padding: 0px;
-  margin: 0px; */
 }
 
 
@@ -18,7 +16,6 @@ window#waybar {
   /* rgba(0, 0, 0, 0.1) */
   /* opacity: 0.9; */
   /* color: #cdd6f4; */
-
 }
 
 
@@ -157,9 +154,8 @@ tooltip {
 
 #tray {
 	/* margin-left: 5px; */
-  margin-right: 12px;
-  margin-left: 5px;
-	/* padding-left: 10px; */
+  margin-right: 5px;
+	padding-left: 10px;
 	margin-bottom: 3px;
 	padding-right: 10px;
 	transition: none;
@@ -184,11 +180,7 @@ tooltip {
 
 
 #clock {
-  /* background: transparent;  */
-  background: rgba(155, 214, 255, .47); /* @accent ; */
-  border: 1.8px @bg2;
-  /* opacity: 0.3; */
-  color: @bg1;
+  color: @text;
   border-radius: 10px;
 }
 
@@ -196,6 +188,8 @@ tooltip {
 
 #cpu {
   color: @text;
+  padding-right: 10px;
+  padding-left: 5px;
   margin-left: 5px;
 }
 
@@ -203,7 +197,7 @@ tooltip {
 
 #memory {
   color: @text;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 
 
@@ -225,7 +219,7 @@ tooltip {
 #pulseaudio {
   color: @text;
   margin-right: 5px;
-  margin-left: 12px;
+  margin-left: 5px;
 }
 
 
@@ -274,7 +268,7 @@ tooltip {
 
 #custom-updates {
   color: @text;
-  /* margin-right: 5px; */
+  margin-right: 5px;
   margin-left: 5px;
 }
 
@@ -288,7 +282,7 @@ tooltip {
 
 #custom-cycle_wall{
   background: rgb(155, 214, 255);
-  background: linear-gradient(45deg, rgba(155, 214, 255, 1) 0%, rgba(155, 214, 255, 0.9870801033591732) 35%, rgba(155,164,255,1) 87%, rgba(155,164,255,1) 90%, rgba(155,164,255,1) 100%);  color: @text;
+  background: linear-gradient(45deg, rgba(155, 214, 255, 1) 0%, rgba(155, 214, 255, 0.9870801033591732) 35%, rgba(155,164,255,1) 87%, rgba(155, 214, 255, 1) 90%);  color: @text;
   background-size: 500% 500%;
   animation: gradient 5s linear infinite;
   font-weight:  bolder;
